// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AudioPlayer Snaps matches snapshot for .m3u8 src 1`] = `
<div
  class="audioPlayer"
>
  <div
    data-testid="h5-audio-player"
    layout="horizontal-reverse"
    src="stream.m3u8"
  >
    H5AudioPlayer
    <span
      data-testid="src"
    >
      stream.m3u8
    </span>
  </div>
</div>
`;

exports[`AudioPlayer Snaps matches snapshot for custom variant 1`] = `
<div
  class="audioPlayer"
>
  <div
    data-testid="h5-audio-player"
    layout="horizontal-reverse"
    src="audio.mp3"
  >
    H5AudioPlayer
    <span
      data-testid="src"
    >
      audio.mp3
    </span>
  </div>
</div>
`;

exports[`AudioPlayer Snaps matches snapshot for default audio player 1`] = `
<div
  class="audioPlayer"
>
  <div
    data-testid="h5-audio-player"
    layout="horizontal-reverse"
    src="audio.mp3"
  >
    H5AudioPlayer
    <span
      data-testid="src"
    >
      audio.mp3
    </span>
  </div>
</div>
`;

exports[`AudioPlayer Snaps matches snapshot for radio variant 1`] = `
<div
  class="audioPlayer"
>
  <div
    customcontrolssection="MAIN_CONTROLS,VOLUME_CONTROLS"
    customprogressbarsection="CURRENT_TIME,PROGRESS_BAR"
    data-testid="h5-audio-player"
    layout="horizontal-reverse"
    src="radio.mp3"
  >
    H5AudioPlayer
    <span
      data-testid="src"
    >
      radio.mp3
    </span>
  </div>
</div>
`;
